--- a/ui/stylesheets/csui/_list.scss
+++ b/ui/stylesheets/csui/_list.scss
@@ -60,7 +60,11 @@
             }
 
             &.reorder {
-                width: 150px;
+                $width: 150px;
+                
+                width: $width;
+                min-width: $width;
+                max-width: $width;
             }
         }
 
